--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -2,7 +2,6 @@ source 'http://rubygems.org'
 
 gem 'rails', '~>3.1.0'
 gem 'json'
-
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
@@ -10,7 +9,7 @@ group :assets do
   gem 'coffee-rails', '~> 3.1.0.rc'
   gem 'uglifier'
 end
-
+gem 'carrierwave', '~> 0.5.6'
 gem 'rails_admin', :path => '../../'
 gem 'devise', '~> 1.4'
 gem 'mlb', '~> 0.5.5'
